[gd_scene load_steps=9 format=2]

[ext_resource path="res://SPRITES/ticket_machine.png" type="Texture" id=1]
[ext_resource path="res://SPRITES/lock_1.png" type="Texture" id=2]
[ext_resource path="res://SPRITES/Instruction Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://SPRITES/back_computer-1.png" type="Texture" id=4]
[ext_resource path="res://SCRIPTS/ticket_machine.gd" type="Script" id=5]
[ext_resource path="res://SPRITES/empty.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="ticket_machine" type="Node2D"]
script = ExtResource( 5 )

[node name="back_ticket_machine" type="Sprite" parent="."]
position = Vector2( -1296, 384 )
scale = Vector2( 11.7099, 4.34699 )
texture = ExtResource( 2 )

[node name="ticket_machine" type="Sprite" parent="."]
position = Vector2( 800, 424 )
scale = Vector2( 1.47917, 1.07292 )
texture = ExtResource( 1 )

[node name="ticket_machine_lb" type="Label" parent="ticket_machine"]
margin_left = -102.761
margin_top = -268.427
margin_right = 221.239
margin_bottom = -185.427
custom_fonts/font = SubResource( 1 )
text = "    INTRODUZCA
SU IDENTIFICACIÃ“N
   POR LA RANURA "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introduce_id_button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introduce_id" type="AnimatedSprite" parent="introduce_id_button"]
position = Vector2( 914, 485 )
scale = Vector2( 0.167969, 0.0527346 )
frames = SubResource( 2 )
frame = 1
playing = true

[connection signal="pressed" from="introduce_id_button" to="." method="_on_introduce_id_button_pressed"]
